--- a/index.html
+++ b/index.html
@@ -30,4 +30,5 @@ Inicialmente os integrantes do grupo eram o próprio Froid, Sampa e Yank. Após 
 Em 2017 o grupo foi desfeito após a saída de Yank, assim Froid seguiu em sua carreira solo.
 Enquanto era integrante do grupo "Um Barril de Rap",Froid também participava de batalhas de rap freestyle frequentando a Batalha do Neurônio e a Batalha do Museu
 sediada no Museu Nacional da República em Brasília, assim crescendo no cenário do rap nacional e ganhando sua notoriedade. 
-Em sua carreira solo Froid lançou diversos hits a partir do ano de 2017 no qual ficaram rapidamente notórios por sua batida envolvente e rimas filosóficas, assim agradando diversos tipos de amantes de rap
+Em sua carreira solo Froid lançou diversos hits a partir do ano de 2017 no qual ficaram rapidamente notórios por sua batida envolvente e rimas filosóficas
+Com seu estilo passou por muitos ouvintes agradando diversos tipos de amantes de rap.
