Froid index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <strong>Quem é Froid?</strong>
-Renato Alves Menezes Barreto[1] mais conhecido pelo seu nome artístico Froid é um rapper nascido em Belo Horizonte no ano de 1993.
+Renato Alves Menezes Barreto mais conhecido pelo seu nome artístico Froid é um rapper nascido em Belo Horizonte no ano de 1993.
  Froid possui um disco de ouro pelo single "SK8 do Matheus" com Rodrigo Cartier, e 2x disco de platina pelo single "Lamentável III" com Cynthia Luz.
 
  eu nome artístico Froid vem em homenagem ao pensador e pai da psicanalise Sigmund Freud, em sua versão simplificada para o português, 
