--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-<strong>Quem é Froid?</strong>
+<!DOCTYPE html>
+<html lang="pt-br">
+<HTML lang="encher"
+   <head>
+     <meta charset="UTF-8">
+     <title>Quem é Froid?</title>
+     <link rel="styleheet"href="style.css"
+   </head>
+<body
+<hl><strong>Quem é Froid?</strong></hl>
+
 Renato Alves Menezes Barreto mais conhecido pelo seu nome artístico Froid é um rapper nascido em Belo Horizonte no ano de 1993.
  Froid possui um disco de ouro pelo single "SK8 do Matheus" com Rodrigo Cartier, e 2x disco de platina pelo single "Lamentável III" com Cynthia Luz.
 
@@ -31,4 +41,4 @@ Em 2017 o grupo foi desfeito após a saída de Yank, assim Froid seguiu em sua c
 Enquanto era integrante do grupo "Um Barril de Rap",Froid também participava de batalhas de rap freestyle frequentando a Batalha do Neurônio e a Batalha do Museu
 sediada no Museu Nacional da República em Brasília, assim crescendo no cenário do rap nacional e ganhando sua notoriedade. 
 Em sua carreira solo Froid lançou diversos hits a partir do ano de 2017 no qual ficaram rapidamente notórios por sua batida envolvente e rimas filosóficas
-Com seu estilo passou por muitos ouvintes agradando diversos tipos de amantes de rap.
+Com seu estilo e carisma passou por muitos ouvintes agradando diversos tipos de amantes de rap.
